# hparsec

./: .gitignore  README.md  TODO.md  TUTORIAL.md  hek_helpers.py  hek_parsec.py  hek_py2py.py  hek_py3_expr.py  hek_py3_parser.py  hek_py3_stmt.py  hek_py_declarations.py  hek_tokenize.py  pyproject.toml
ADASCRIPT_GRAMMAR/: py3compound_stmt.py  py3expr.py  py3stmt.py
BENCHMARK/: awk.ady  awk_OO.ady  awk_base.ady  awk_example.ady  cc_hist.hpy  dijkstra.ady  dijkstra.hpy  fsel.ady  fsel.hpy  geo_server.ady  geo_server.hpy  graph.ady  graph.hpy  h_shortest_path  h_shortest_path.ady  h_shortest_path.hpy  h_shortest_path.hpy~  h_shortest_path.nim  h_shortest_path_gen.py  hshow_changes.hpy  lv.ady  lv.hpy  monty_hall.ady  monty_hall.hpy  phonecode.ady  phonecode.hpy  phonecode.nim  primes  primes.ady  primes.hpy  primes.nim  show_status.ady  show_status.hpy  sv.ady  test_awk.ady  test_h_shortest_path.ady  test_h_state_search.ady
EXAMPLES/: average_line.ady  cc_hist.ady  floyd.ady  hek_nim_declarations.py  hek_nim_expr.py  hek_nim_parser.py  hek_nim_stmt.py  hek_py2py.py  hek_py3_expr.py  hek_py3_parser.py  hek_py3_stmt.py  hek_py_declarations.py  microgpt.py  monty_hall.ady  phonecode.ady  primes.ady  py3expr.py  py3parser.py  py3stmt.py  py_declarations.py  shortest_path.ady  state_search.ady  test_awk.ady  test_awk_sample.txt  test_hek_py2py.py  test_phones.txt  test_shortest_path.ady  test_state_search.ady  test_words.txt
GRAMMAR/: py3stmt.py
HPYTHON_GRAMMAR/: py3compound_stmt.py  py3expr.py  py3stmt.py  py_declarations.py
NIM_VERSION/: Makefile  hek_parsec.nim  (+1 more)
(+60 files in other folders)
